syntax = "proto3";

option go_package = "github.com/crumbjp/faissdb/server/feature";

package feature;

service Feature {
  rpc Status (StatusRequest) returns (StatusReply) {}
  rpc Set (SetRequest) returns (SetReply) {}
  rpc Del (DelRequest) returns (DelReply) {}
  rpc Search (SearchRequest) returns (SearchReply) {}
  rpc Train (TrainRequest) returns (TrainReply) {}
  rpc Dropall (DropallRequest) returns (DropallReply) {}
  rpc DbStats (DbStatsRequest) returns (DbStatsReply) {}
}

message StatusRequest {
}

message StatusReply {
  int32 id = 1;
  int32 status = 2;
  int32 role = 3;
}

message Data {
  string key = 1;
  repeated double v = 2;
  string sparsev = 3;
  repeated string collections = 4;
}

message SetRequest {
  repeated Data data = 1;
}

message SetReply {
  int32 nstored = 1;
  int32 nerror = 2;
}

message DelRequest {
  repeated string key = 1;
}

message DelReply {
}

message SearchRequest {
  int32 n = 1;
  repeated double v = 2;
  string sparsev = 3;
  string collection = 4;
}

message SearchReply {
  repeated double distances = 1;
  repeated string keys = 2;
}

message TrainRequest {
  double proportion = 1;
  bool force = 2;
}

message TrainReply {
}

message DropallRequest {
}

message DropallReply {
}

message DbStatsRequest {
}

message DbData {
  string collection = 1;
  int32 ntotal = 2;
}

message FaissConfig {
  string description = 1;
	string metric = 2;
	int32 nprobe = 3;
	int32 dimension = 4;
	int32 syncinterval = 5;
}

message DbStatsReply {
  bool istrained = 1;
  FaissConfig faissconfig = 2;
  string lastsynced = 3;
  string lastkey = 4;
  int32 status = 5;
  repeated DbData dbs = 6;
}
